update giao diện

--- a/site/view/trangchu.html
+++ b/site/view/trangchu.html
@@ -26,16 +26,22 @@
   </head>
   <style></style>
   <body>
-    <div class="container-fluid">
+    <div class="Container-fluid">
       <div class="header">
         <div class="header-top">
           <div class="header-top-left">
-            <img src="/public/images/logo.png" alt="Logo" />
+            <img src="../../public/img/logo.png" alt="Logo" />
           </div>
           <div class="header-top-main">
             <div class="menu">
-              <a href="#">Kem Chống Nắng</a> | <a href="#">Tẩy Trang</a> |
-              <a href="#">Toner</a> | <a href="#">Son màu</a> |
+              <a href="#">Kem Chống Nắng</a>
+              <span>|</span>
+              <a href="#">Tẩy Trang</a>
+              <span>|</span>
+              <a href="#">Toner</a>
+              <span>|</span>
+              <a href="#">Son màu</a>
+              <span>|</span>
               <a href="#">Dầu Gội</a>
             </div>
             <div class="search-box">
@@ -48,8 +54,9 @@
           </div>
           <div class="header-top-right">
             <div class="cart">
-              <a href="/cart"
-                ><i class="fas fa-shopping-cart"></i> Hệ thống cửa hàng</a
+              <a href="/cart" class="cart-link">
+                <i class="fas fa-shopping-cart"></i>
+                <span>Hệ thống cửa hàng</span></a
               >
             </div>
             <div class="cart">
