--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,35 +4,51 @@
   box-sizing: border-box;
 }
 .header {
-  background-color: #f8f9fa;
-  padding: 20px 0;
-
+  background-color: #3e6807;
   flex-direction: column;
   align-items: center;
 }
 .header-top {
-  background-color: #f8f9fa;
-  padding: 10px 0;
+  background-color: #3e6807;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 90%;
+  margin: auto;
+}
+.header-top-left {
+  align-items: center;
+  flex: 1;
+}
+.header-top-left img {
+  width: 220px;
+  height: auto;
 }
 
 .header-top-main {
   padding: 10px 20px;
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
+  flex: 2;
+}
+.header-top-right {
+  display: flex;
+  justify-content: space-around;
   align-items: center;
+  flex: 1;
 }
 
 .menu {
   margin-bottom: 10px;
   display: flex;
   flex: 1;
+  align-items: flex-end;
+  color: white;
 }
 
 .menu a {
-  color: black;
+  color: white;
   text-decoration: none;
   margin: 0 10px;
   font-size: 14px;
@@ -40,8 +56,7 @@
 
 .search-box {
   display: flex;
-  width: 154%;
-  max-width: 600px;
+  width: 100%;
   background-color: white;
   border-radius: 30px;
   overflow: hidden;
@@ -67,4 +82,16 @@
 .search-box i {
   font-size: 16px;
   color: #3d640f;
+}
+
+.cart-link {
+  display: flex;
+  align-items: center;
+  color: white;
+  text-decoration: none;
+}
+.cart-link span {
+  margin-left: 15px;
+  font-size: 16px;
+  width: 70px;
 }
