--- a/New folder/site/view/trangchu.html
+++ b/New folder/site/view/trangchu.html
@@ -85,29 +85,93 @@
               <div class="pure-item">
                 <div class="pure-item-left">
                   <ul class="pure-list-item">
-                    <li>
+                    <li data-tab="tab-1" class="combo">
                       <a href="#">Combo chăm sóc da</a>
                       <i class="fas fa-greater-than"></i>
+                      <!-- Combo chăm sóc da -->
+                      <div class="pure-item-right" id="tab-1" class="content">
+                        <div class="pure-item-right-content-skin">
+                          <a>
+                            <img
+                              src="../../public/img/combo-cham-soc-da-1.webp"
+                              alt=""
+                            />
+                          </a>
+                          <a href=""
+                            ><p>Combo Kem Dưỡng Ẩm, Serum tơ tằm...</p></a
+                          >
+                          <div class="pure-item-price-info">
+                            <span class="price">1.200.000đ</span>
+                            <span class="old-price">1.500.000đ</span>
+                          </div>
+                        </div>
+                        <div class="pure-item-right-content-skin">
+                          <a>
+                            <img
+                              src="../../public/img/combo-cham-soc-da-1.webp"
+                              alt=""
+                            />
+                          </a>
+                          <a href=""
+                            ><p>Combo Kem Dưỡng Ẩm, Serum tơ tằm...</p></a
+                          >
+                          <div class="pure-item-price-info">
+                            <span class="price">1.200.000đ</span>
+                            <span class="old-price">1.500.000đ</span>
+                          </div>
+                        </div>
+                        <div class="pure-item-right-content-skin">
+                          <a>
+                            <img
+                              src="../../public/img/combo-cham-soc-da-1.webp"
+                              alt=""
+                            />
+                          </a>
+                          <a href=""
+                            ><p>Combo Kem Dưỡng Ẩm, Serum tơ tằm...</p></a
+                          >
+                          <div class="pure-item-price-info">
+                            <span class="price">1.200.000đ</span>
+                            <span class="old-price">1.500.000đ</span>
+                          </div>
+                        </div>
+                        <div class="pure-item-right-content-skin">
+                          <a>
+                            <img
+                              src="../../public/img/combo-cham-soc-da-1.webp"
+                              alt=""
+                            />
+                          </a>
+                          <a href=""
+                            ><p>Combo Kem Dưỡng Ẩm, Serum tơ tằm...</p></a
+                          >
+                          <div class="pure-item-price-info">
+                            <span class="price">1.200.000đ</span>
+                            <span class="old-price">1.500.000đ</span>
+                          </div>
+                        </div>
+                      </div>
                     </li>
-                    <li>
-                      <a href="trangchu.html">Combo chăm sóc tóc</a>
+                    <li data-tab="tab-2">
+                      <a href="#">Combo chăm sóc tóc</a>
                       <i class="fas fa-greater-than"></i>
                     </li>
-                    <li>
-                      <a href="trangchu.html">Combo chăm sóc môi</a>
+                    <li data-tab="tab-3">
+                      <a href="#">Combo chăm sóc môi</a>
                       <i class="fas fa-greater-than"></i>
                     </li>
-                    <li>
-                      <a href="trangchu.html">Combo khác</a>
+                    <li data-tab="tab-4">
+                      <a href="#">Combo khác</a>
                       <i class="fas fa-greater-than"></i>
                     </li>
-                    <li>
-                      <a href="trangchu.html">Black Green Day</a>
+                    <li data-tab="tab-5">
+                      <a href="#">Black Green Day</a>
                       <i class="fas fa-greater-than"></i>
                     </li>
                   </ul>
                 </div>
-                <div class="pure-item-right right-1">
+                <!-- Combo chăm sóc da -->
+                <!-- <div class="pure-item-right" id="tab-1" class="content">
                   <div class="pure-item-right-content-skin">
                     <a>
                       <img
@@ -160,8 +224,9 @@
                       <span class="old-price">1.500.000đ</span>
                     </div>
                   </div>
-                </div>
-                 <div class="pure-item-right right-2">
+                </div> -->
+                <!-- Combo chăm sóc tóc -->
+                <!-- <div class="pure-item-right" id="tab-2">
                   <div class="pure-item-right-content-skin">
                     <a>
                       <img
@@ -214,13 +279,13 @@
                       <span class="old-price">1.500.000đ</span>
                     </div>
                   </div>
-                </div>
+                </div> -->
               </div>
             </li>
             <!-- title-san-pham -->
             <li class="title-san-pham">
               <a href="trangchu.html">Trang Điểm</a>
-                  <div class="pure-item">
+              <div class="pure-item">
                 <div class="pure-item-left">
                   <ul class="pure-list-item">
                     <li>
