--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,11 @@
       #3e6807 10px,
       #3e6807 10px);
   color: white;
+  position: fixed;
+  top: 0;
+  z-index: 9999;
+  transition: top 0.3s ease-in-out;
+  width: 100%;
 }
 
 .header-top {
@@ -18,7 +23,7 @@
   justify-content: space-between;
   align-items: center;
   width: 95%;
-  margin: -15px auto;
+  margin: -30px auto;
 }
 
 .header-top-left {
@@ -27,7 +32,6 @@
 }
 
 .header-top-left img {
-  width: 100%;
   height: auto;
 }
 
@@ -73,7 +77,7 @@
 
 .search-box input {
   flex: 1;
-  padding: 12px 20px;
+  padding: 10px 20px;
   border: none;
   font-style: italic;
   font-size: 14px;
@@ -195,7 +199,7 @@
   align-items: flex-start;
   padding: 0px;
   color: #000;
-  top: 40px;
+  top: 39px;
   z-index: 1000;
   box-shadow: 0 2px 25px rgba(0, 0, 0, 0.1);
 }
@@ -235,7 +239,6 @@
   justify-items: center;
   align-items: center;
   background-color: #f9f9f9;
-  display: none;
 }
 
 .pure-item-right-content-skin {
@@ -288,30 +291,17 @@
   display: none;
 }
 
-.title-san-pham:hover .pure-item {
-  display: flex !important;
+.pure-item-left ul li.active {
+  background-color: #90c54b !important;
+}
+
+.pure-item-left ul li.active a {
+  color: #fff;
 }
 
 /* Hover vào chính nó */
-
 .pure-item-left ul li:hover {
   background-color: #90c54b;
-}
-
-/* Hover toàn bộ menu thì sáng item đầu */
-.title-san-pham:hover li:first-child {
-  background-color: #90c54b;
-}
-
-/* danh sách hiển thị pure-item-right */
-/* Khi hover menu chính, hiện .right-1 */
-.title-san-pham:hover .right-1 {
-  display: grid !important;
-}
-
-/* Nhưng nếu hover vào các mục khác => không active li:first-child */
-.pure-item-left:has(li:hover:not(:first-child)) li:first-child {
-  background-color: transparent !important;
 }
 
 /* Ẩn mặc định tất cả phần phải */
@@ -321,54 +311,6 @@
 .right-4,
 .right-5 {
   display: none;
-}
-
-/* Combo right 1*/
-/* Khi hover li:first-child thì vẫn hiện right-1 */
-.pure-item-left:has(li:nth-child(1):hover)~.right-1 {
-  display: grid !important;
-}
-
-/* Combo right 2 */
-.pure-item-left:has(li:nth-child(2):hover)~.right-1 {
-  display: none !important;
-}
-
-.pure-item-left:has(li:nth-child(2):hover)~.right-2 {
-  display: grid !important;
-}
-
-/* Combo right 3 */
-.pure-item-left:has(li:nth-child(3):hover)~.right-1,
-.pure-item-left:has(li:nth-child(3):hover)~.right-2 {
-  display: none !important;
-}
-
-.pure-item-left:has(li:nth-child(3):hover)~.right-3 {
-  display: grid !important;
-}
-
-/* Combo right 4 */
-.pure-item-left:has(li:nth-child(4):hover)~.right-1,
-.pure-item-left:has(li:nth-child(4):hover)~.right-2,
-.pure-item-left:has(li:nth-child(4):hover)~.right-3 {
-  display: none !important;
-}
-
-.pure-item-left:has(li:nth-child(4):hover)~.right-4 {
-  display: grid !important;
-}
-
-/* Combo right 5 */
-.pure-item-left:has(li:nth-child(5):hover)~.right-1,
-.pure-item-left:has(li:nth-child(5):hover)~.right-2,
-.pure-item-left:has(li:nth-child(5):hover)~.right-3,
-.pure-item-left:has(li:nth-child(5):hover)~.right-4 {
-  display: none !important;
-}
-
-.pure-item-left:has(li:nth-child(5):hover)~.right-5 {
-  display: grid !important;
 }
 
 /* slide */
@@ -848,6 +790,7 @@
   font-weight: 400;
   color: #4c503d;
 }
+
 .home-resources-item-1 a {
   display: inline-block;
   padding: 10px 20px;
@@ -863,8 +806,9 @@
   width: 50%;
   text-align: center;
 }
+
 .home-resources-item-1 a:hover {
-background-color: orange;
+  background-color: orange;
   color: white;
   text-decoration: none;
   transition: background-color 0.3s ease;
