Resolve conflict when pulling main

--- a/site/view/shop.html
+++ b/site/view/shop.html
@@ -316,7 +316,7 @@
                 <div class="shops">
                     <!-- Shop Card Example -->
                     <div class="shop-card">
-                        <img src="https://comem.vn/assets/shop1.jpg" alt="Cửa hàng Cỏ Mềm">
+                        <img src="../../public/img/CH01_sp.webp" alt="Cửa hàng Cỏ Mềm">
                         <div class="info">
                             <div class="phone">0977806245</div>
                             <div class="name">Cỏ Mềm Phú Yên</div>
@@ -324,7 +324,7 @@
                         </div>
                     </div>
                     <div class="shop-card">
-                        <img src="https://comem.vn/assets/shop2.jpg" alt="Cửa hàng Cỏ Mềm">
+                        <img src="../../public/img/CH02_sp.webp" alt="Cửa hàng Cỏ Mềm">
                         <div class="info">
                             <div class="phone">0915052431</div>
                             <div class="name">Cỏ Mềm Long Thành, Đồng Nai</div>
