update product details

--- a/site/view/trangchu.html
+++ b/site/view/trangchu.html
@@ -100,7 +100,7 @@
               <!-- Nội dung combo chăm sóc da -->
               <div class="pure-item-right right-1">
                 <div class="pure-item-right-content-skin">
-                  <a>
+                  <a href="product-details.html">
                     <img src="../../public/img/combo-cham-soc-da-1.webp" alt="" />
                   </a>
                   <a href="">
